--- a/component/index.html
+++ b/component/index.html
@@ -9,5 +9,6 @@
     <button class="btn btn-primary" role="submit">primary</button>
     <button class="btn btn-success" role="submit">success</button>
     <button class="btn btn-danger" role="submit">danger</button>
+    <div class="caret"></div>
   </body>
 </html>
