--- a/component/scss/_buttons.scss
+++ b/component/scss/_buttons.scss
@@ -71,3 +71,14 @@
 .btn-success {
     @include button-variant($btn-success-color, $btn-success-bg, $btn-success-border)
 }
+
+
+
+.caret {
+    display: inline-block;
+    width: 0px;
+    height: 0px;
+    border-left: 10px solid transparent;
+    border-top: 10px solid;
+    border-right: 10px solid transparent;
+}
