# 添加下拉框 1. 添加下拉框 2. 目前只有绿色 3. 有瑕疵，如果用调试工具看的话，`a`元素会越界。寻求解决方案。

--- a/component/index.html
+++ b/component/index.html
@@ -9,6 +9,21 @@
     <button class="btn btn-primary" role="submit">primary</button>
     <button class="btn btn-success" role="submit">success</button>
     <button class="btn btn-danger" role="submit">danger</button>
-    <div class="caret"></div>
+
+
+
+    <div class="dropdown">
+      <button class="btn btn-success">Book
+	<div class="caret"></div>
+      </button>
+      <ul class="dropdown-menu">
+	<li><a href="#">Ruby</a></li>
+	<li><a href="#">Python</a></li>
+	<li><a href="#">Javascript</a></li>
+      </ul>
+    </div>
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/dropdown.js"></script>
   </body>
 </html>
