--- a/component/scss/_variables.scss
+++ b/component/scss/_variables.scss
@@ -23,4 +23,6 @@ $btn-danger-border: transparent !default;
 $btn-success-color: #ffffff !default;
 $btn-success-bg: #47DE3D !default;
 $btn-success-border: transparent !default;
-			
+
+/* dropdown button */
+$a-color: #000 !default;
