# 实现消息框 1. 简单实现消息框

--- a/component/index.html
+++ b/component/index.html
@@ -10,8 +10,6 @@
     <button class="btn btn-success" role="submit">success</button>
     <button class="btn btn-danger" role="submit">danger</button>
 
-
-
     <div class="dropdown">
       <button class="btn btn-success">Book
 	<div class="caret"></div>
@@ -23,6 +21,14 @@
       </ul>
     </div>
 
+    <div id="good">
+      game
+      <div class="tooltip tooltip-bottom in">
+	<div class="tooltip-arrow">
+	</div>
+	<div class="tooltip-inner">he is so nice</div>
+      </div>
+    </div>
     <script src="js/jquery.min.js"></script>
     <script src="js/dropdown.js"></script>
   </body>
