--- a/component/index.html
+++ b/component/index.html
@@ -6,9 +6,18 @@
     <link rel="stylesheet" href="dist/css/custom.css" />
   </head>
   <body>
-    <button class="btn btn-primary" role="submit">primary</button>
-    <button class="btn btn-success" role="submit">success</button>
-    <button class="btn btn-danger" role="submit">danger</button>
+    <div class="btn-group">
+      <button class="btn btn-primary" role="submit">primary</button>
+      <button class="btn btn-primary" role="submit">success</button>
+      <button class="btn btn-primary" role="submit">danger</button>
+    </div>
+
+
+    <div class="btn-vertical-group" style="width: 200px;">
+      <button class="btn btn-primary" role="submit">primary</button>
+      <button class="btn btn-primary" role="submit">success</button>
+      <button class="btn btn-primary" role="submit">danger</button>
+    </div>
 
     <div class="dropdown">
       <button class="btn btn-success">Book
