--- a/component/index.html
+++ b/component/index.html
@@ -38,6 +38,13 @@
 	<div class="tooltip-inner">he is so nice</div>
       </div>
     </div>
+
+
+    <ul class="nav">
+      <li>Python</li>
+      <li>Ruby</li>
+      <li>JavaScript</li>
+    </ul>
     <script src="js/jquery.min.js"></script>
     <script src="js/dropdown.js"></script>
   </body>
