使用webpack管理项目 1. 修改后自动编译源文件 2. 修改后自动刷新页面

--- a/component/app/index.html
+++ b/component/app/index.html
@@ -3,7 +3,7 @@
   <head>
     <title></title>
     <meta charset="utf-8" />
-    <link rel="stylesheet" href="dist/css/custom.css" />
+
   </head>
   <body>
     <div class="btn-group">
@@ -45,7 +45,6 @@
       <li>Ruby</li>
       <li>JavaScript</li>
     </ul>
-    <script src="js/jquery.min.js"></script>
-    <script src="js/dropdown.js"></script>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
