--- a/component/app/index.html
+++ b/component/app/index.html
@@ -39,12 +39,29 @@
       </div>
     </div>
 
-
+<!--
     <ul class="nav">
-      <li>Python</li>
-      <li>Ruby</li>
-      <li>JavaScript</li>
+      <li><a href="#">Python</a></li>
+      <li><a href="#">Ruby</a></li>
+      <li><a href="#">JavaScript</a></li>
+      <li class="disabled"><a href="#">Disable</a></li>
+    </ul> -->
+
+    <ul class="nav nav-tabs nav-justified">
+      <li class="active"><a href="#">Python</a></li>
+      <li><a href="#">Ruby</a></li>
+      <li><a href="#">JavaScript</a></li>
+      <li class="disabled"><a href="#">Disable</a></li>
     </ul>
+
+    <ul class="nav nav-stacked">
+      <li class="active"><a href="#">Python</a></li>
+      <li><a href="#">Ruby</a></li>
+      <li><a href="#">JavaScript</a></li>
+      <li class="nav-divider"></li>
+      <li class="disabled"><a href="#">Disable</a></li>
+    </ul>
+
     <script src="build/bundle.js"></script>
   </body>
 </html>
