阅读源代码，添加分页，标签等组件

--- a/component/app/scss/custom.scss
+++ b/component/app/scss/custom.scss
@@ -3,6 +3,10 @@
 @import 'buttons_group';
 @import 'tooltip';
 @import 'navbar';
+@import 'breadcrumb';
+@import 'pagination';
+@import 'pager';
+@import 'label';
 
 body {
     background: $bg_color;
