--- a/component/app/index.html
+++ b/component/app/index.html
@@ -6,46 +6,7 @@
 
   </head>
   <body>
-    <div class="btn-group">
-      <button class="btn btn-primary" role="submit">primary</button>
-      <button class="btn btn-primary" role="submit">success</button>
-      <button class="btn btn-primary" role="submit">danger</button>
-    </div>
 
-
-    <div class="btn-vertical-group" style="width: 200px;">
-      <button class="btn btn-primary" role="submit">primary</button>
-      <button class="btn btn-primary" role="submit">success</button>
-      <button class="btn btn-primary" role="submit">danger</button>
-    </div>
-
-    <div class="dropdown">
-      <button class="btn btn-success">Book
-	<div class="caret"></div>
-      </button>
-      <ul class="dropdown-menu">
-	<li><a href="#">Ruby</a></li>
-	<li><a href="#">Python</a></li>
-	<li><a href="#">Javascript</a></li>
-      </ul>
-    </div>
-
-    <div id="good">
-      game
-      <div class="tooltip tooltip-bottom in">
-	<div class="tooltip-arrow">
-	</div>
-	<div class="tooltip-inner">he is so nice</div>
-      </div>
-    </div>
-
-<!--
-    <ul class="nav">
-      <li><a href="#">Python</a></li>
-      <li><a href="#">Ruby</a></li>
-      <li><a href="#">JavaScript</a></li>
-      <li class="disabled"><a href="#">Disable</a></li>
-    </ul> -->
 
     <ul class="nav nav-tabs nav-justified">
       <li class="active"><a href="#">Python</a></li>
@@ -53,7 +14,6 @@
       <li><a href="#">JavaScript</a></li>
       <li class="disabled"><a href="#">Disable</a></li>
     </ul>
-
     <ul class="nav nav-stacked">
       <li class="active"><a href="#">Python</a></li>
       <li><a href="#">Ruby</a></li>
@@ -61,7 +21,45 @@
       <li class="nav-divider"></li>
       <li class="disabled"><a href="#">Disable</a></li>
     </ul>
+    <nav class="navbar navbar-default">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">Brand</a>
+      </div>
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Python</a></li>
+        <li><a href="#">Ruby</a></li>
+        <li><a href="#">JavaScript</a></li>
+      </ul>
+      <form action="post" class="navbar-form">
+          <div class="form-group">
+            <input type="text" class="form-control" placeholder="Search">
+          </div>
+          <button type="submit" class="btn">right</button>
+      </form>
+    </nav>
+    <ul class="breadcrumb">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Library</a></li>
+      <li class="active">Data</li>
+    </ul>
+    <ul class="pagination">
+      <li class="disabled"><a href="#">&laquo;</a></li>
+      <li class="active"><a href="">1</a></li>
+      <li><a href="">2</a></li>
+      <li><a href="">3</a></li>
+      <li><a href="">&raquo;</a></li>
+    </ul>
 
+    <ul class="pager">
+      <li class="previous"><a href="#">prev</a></li>
+      <li class="next"><a href="#">next</a></li>
+    </ul>
+    <div>
+      <span class="label">Default</span>
+      <span class="label">Primary</span>
+      <span class="label">Danger</span>
+      <span class="label">Success</span>
+    </div>
     <script src="build/bundle.js"></script>
   </body>
 </html>
