--- a/component/app/scss/_navbar.scss
+++ b/component/app/scss/_navbar.scss
@@ -113,3 +113,87 @@
 
 
 }
+
+//导航条
+.navbar {
+  position: relative;
+  min-height: 50px;
+  margin-bottom: 20px;
+  border: 1px solid transparent;
+  @include clearfix();
+}
+
+@media (min-width: 768px) {
+  .navbar {
+    border-radius: 4px;
+  }
+
+  .navbar-header {
+    float: left;
+  }
+
+  .navbar-nav {
+    float: left;
+    margin: 0;
+  }
+
+  .navbar-nav {
+    > li {
+      float: left;
+      > a {
+        padding-top: 15px;
+        padding-bottom: 15px;
+      }
+    }
+  }
+}
+
+.navbar-brand {
+  float: left;
+  height: 20px;
+  padding: 15px;
+  font-size: 18px;
+  line-height: 20px;
+  text-decoration: none;
+  &:hover,
+  &:focus {
+    text-decoration: none;
+  }
+}
+
+.navbar-default {
+  background-color: #fff;
+}
+
+.navbar-default {
+  .navbar-brand {
+    color: #777;
+    &hover
+    &focus{
+      color: #5e5e5e;
+      background: transparent;
+    }
+  }
+}
+
+
+.navbar-form {
+  padding: 15px;
+  margin-right: -15px;
+  border-top: 1px solid transparent;
+  border-bottom: 1px solid transparent;
+  box-shadow: inset 0 1px 0 rgba(255, 255, 255, .1), 0 1px 0 rgba(225, 225, 225, .1);
+  display: inline-block;
+  .form-group {
+    vertical-align: middle;
+    display: inline-block;
+  }
+  .btn {
+    height: 20px;
+    line-height: 1;
+    padding: 0px 4px;
+    vertical-align: middle;
+    display: inline-block;
+  }
+
+}
