添加进度条，徽章，警告等组件。

--- a/component/app/scss/custom.scss
+++ b/component/app/scss/custom.scss
@@ -7,6 +7,10 @@
 @import 'pagination';
 @import 'pager';
 @import 'label';
+@import 'badge';
+@import 'jumbotron';
+@import 'alert';
+@import 'progress';
 
 body {
     background: $bg_color;
