--- a/component/app/index.html
+++ b/component/app/index.html
@@ -42,24 +42,25 @@
       <li><a href="#">Library</a></li>
       <li class="active">Data</li>
     </ul>
-    <ul class="pagination">
-      <li class="disabled"><a href="#">&laquo;</a></li>
-      <li class="active"><a href="">1</a></li>
-      <li><a href="">2</a></li>
-      <li><a href="">3</a></li>
-      <li><a href="">&raquo;</a></li>
-    </ul>
 
-    <ul class="pager">
-      <li class="previous"><a href="#">prev</a></li>
-      <li class="next"><a href="#">next</a></li>
-    </ul>
+    <br />
     <div>
-      <span class="label">Default</span>
-      <span class="label">Primary</span>
-      <span class="label">Danger</span>
-      <span class="label">Success</span>
+      <a class="btn btn-primary" href="#">Inbox <span class="badge badge-danger">42</span></a>
     </div>
+
+    <div class="alert">
+      <button type="button" class="close" data-dismiss="alert">&times;</button>
+      <strong>Warning!</strong>Best check yo self, you're not looking too good.
+    </div>
+
+    <div class="progress">
+      <div class="progress-bar" style="width:60%"></div>
+      <div class="progress-bar" style="width:20%;background-color: red;"></div>
+    </div>
+    <div class="progress progress-striped active">
+      <div class="progress-bar" style="width:60%"></div>
+    </div>
+
     <script src="build/bundle.js"></script>
   </body>
 </html>
