--- a/component/app/scss/_buttons.scss
+++ b/component/app/scss/_buttons.scss
@@ -47,6 +47,7 @@
 
 .btn {
   display: inline-block;
+  text-decoration: none;
   text-align: center;
   cursor: pointer;
   border: $border_width solid transparent;
