--- a/component/app/index.html
+++ b/component/app/index.html
@@ -61,6 +61,9 @@
       <div class="progress-bar" style="width:60%"></div>
     </div>
 
+    <div class="linear">
+    </div>
+
     <script src="build/bundle.js"></script>
   </body>
 </html>
